@@ -2,34 +2,45 @@ package com.example.weiboblog.security;
 
 import com.example.weiboblog.domain.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class UserPrincipal implements UserDetails {
 
     private final Long id;
     private final String username;
     private final String password;
+    private final boolean admin;
 
-    public UserPrincipal(Long id, String username, String password) {
+    public UserPrincipal(Long id, String username, String password, boolean admin) {
         this.id = id;
         this.username = username;
         this.password = password;
+        this.admin = admin;
     }
 
     public static UserPrincipal from(User user) {
-        return new UserPrincipal(user.getId(), user.getUsername(), user.getPasswordHash());
+        return new UserPrincipal(user.getId(), user.getUsername(), user.getPasswordHash(), user.isAdmin());
     }
 
     public Long getId() {
         return id;
     }
 
+    public boolean isAdmin() {
+        return admin;
+    }
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        if (!admin) {
+            return Collections.emptyList();
+        }
+        return List.of(new SimpleGrantedAuthority("ROLE_ADMIN"));
     }
 
     @Override
